--- a/index.html
+++ b/index.html
@@ -1,9 +1,81 @@
+<!DOCTYPE html>
 <html>
- 
-<body>
-  <h1>Benjamin Wierzbanowski</h1>
-  <p>Welcome to my github page</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+  <head>
+    <title>Code Academy Cheat Sheet</title>
+    <link href="/CodeAcademy/GitHubCheatSheet/bwierzbo.github.io/resources/css/index.css" type="text/css" rel="stylesheet">
+  </head>
+  <body>
+    <header>
+      <h1>Benjamin Wierzbanowski</h1>
+      <p>GitHub Cheat Sheet for Code Academy</p>
+    </header>
+    <div class="tables">
+      <h2 class="tablecaptions">Table Tags</h2>
+      <table>
+        <thead>
+          <tr>
+            <td class="tag">Tag</td>
+            <td class="name">Name</td>
+            <td class="desc">Description</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><span class="code">&lt;table&gt;</span></td>
+            <td>Table</td>
+            <td>The wrapper element for all HTML tables.</td>
+          </tr>
+          <tr>
+            <td><span class="code">&lt;thead&gt;</span></td>
+            <td>Table Head</td>
+            <td>The set of rows defining the column headers in a table.</td>
+          </tr>
+          <tr>
+            <td><span class="code">&lt;tbody&gt;</span></td>
+            <td>Table Body</td>
+            <td>The set of rows containing actual table data.</td>
+          </tr>
+          <tr>
+            <td><span class="code">&lt;tr&gt;</span></td>
+            <td>Table Row</td>
+            <td>The table row container.</td>
+          </tr>
+          <tr>
+            <td><span class="code">&lt;td&gt;</span></td>
+            <td>Table Data</td>
+            <td>The table data container.</td>
+          </tr>
+          <tr>
+            <td><span class="code">&lt;tfoot&gt;</span></td>
+            <td>Table Foot</td>
+            <td>The set of rows defining the footer in a table.</td>
+          </tr>
+        </tbody>
+      </table>
+        <h2 class="tablecaptions">Table Attributes</h2>
+        <table>
+          <thead>
+            <tr>
+              <td class="tag">Attribute</td>
+              <td class="name">Name</td>
+              <td class="desc">Description</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><span class="code">colspan</span></td>
+              <td>Column Span</td>
+              <td>Defines how many columns a td element should span.</td>
+            </tr>
+            <tr>
+              <td><span class="code">rowspan</span></td>
+              <td>Row Span</td>
+              <td>Defines how many rows a td element should span.</td>
+            </tr>
+          </tbody>
+    </div>
+
+
+  </body>
  
 </html>
