--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Code Academy Cheat Sheet</title>
-    <link href="/CodeAcademy/GitHubCheatSheet/bwierzbo.github.io/resources/css/index.css" type="text/css" rel="stylesheet">
+    <link href="/bwierzbo.github.io/resources/css/index.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <header>
