added js file and navbar

--- a/index.html
+++ b/index.html
@@ -2,14 +2,45 @@
 <html>
   <head>
     <title>Code Academy Cheat Sheet</title>
+    <link href="/resources/css/index.css" type="text/css" rel="stylesheet">
     <link href="/CodeAcademy/GitHubCheatSheet/bwierzbo.github.io/resources/css/index.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
+    <script type="text/javascript" src="/CodeAcademy/GitHubCheatSheet/bwierzbo.github.io/resources/javascript/index.js"></script>
+    
   </head>
   <body>
+    <a name="top"></a>
     <header>
       <h1>Benjamin Wierzbanowski</h1>
-      <p>GitHub Cheat Sheet for Code Academy</p>
+      <p>Website Building Cheat Sheet</p>
     </header>
+    <nav>
+      <a href="#top">Top</a>
+      <div class="dropdown">
+        <button class="dropbtn">Fundamentals of HTML
+          <i class ="fas fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="#">Elements</a>
+          <a href="#">Structure</a>
+          <a href="#table">Tables</a>
+
+        </div>
+      </div>
+      <div class="dropdown">
+        <button class="dropbtn">Fundamentals of CSS
+          <i class ="fas fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="#">Selectors and Visual Rules</a>
+          <a href="#">The Box Model</a>
+          <a href="#table">Display and Positioning</a>
+        </div>
+      </div>
+      
+    </nav>
     <div class="tables">
+      <a name="table"></a>
       <h2 class="tablecaptions">Table Tags</h2>
       <table>
         <thead>
